# CuteMarkEd

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CuteMarkEd.pro  CuteMarkEd.wxs  LICENSE.md  README.md  app-static.pri  appveyor.yml  changelog.html  features.html  highlight.pack.js  index.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  markdowneditor.cpp  markdowneditor.h  markdownparser.cpp  params.json  peg-markdown-highlight.pri  prerequisite.md  styles.qrc  textbuffer.cpp  textbuffer.h
app/: CMakeLists.txt  Info.plist  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  app-icon.icns  app.pro  builtin-htmlpreview-styles.json  builtin-htmlpreview-themes.json  builtin-presentation-styles.json  cutemarked.desktop  cutemarked.rc  exporthtmldialog.cpp  exporthtmldialog.h  exporthtmldialog.ui  exportpdfdialog.cpp  exportpdfdialog.h  exportpdfdialog.ui  exportrevealdialog.cpp  exportrevealdialog.h  exportrevealdialog.ui  findreplacewidget.cpp  findreplacewidget.h  findreplacewidget.ui  highlightworkerthread.cpp  highlightworkerthread.h  htmlhighlighter.cpp  htmlhighlighter.h  htmlpreviewcontroller.cpp  htmlpreviewcontroller.h  htmlpreviewgenerator.cpp  htmlpreviewgenerator.h  imagetooldialog.cpp  imagetooldialog.h  imagetooldialog.ui  imainwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+57 more)
app-static/: CMakeLists.txt  app-static.pro  collection.h  completionlistmodel.cpp  completionlistmodel.h  datalocation.cpp  datalocation.h  htmlpreviewcontroller.cpp  htmlpreviewcontroller.h  htmlviewsynchronizer.cpp  htmlviewsynchronizer.h  jsonfile.h  jsontranslator.h  jsontranslatorfactory.h  revealviewsynchronizer.cpp  revealviewsynchronizer.h  slidelinemapping.cpp  slidelinemapping.h  styles.cpp  styles.h  viewsynchronizer.cpp  viewsynchronizer.h  yamlheaderchecker.cpp  yamlheaderchecker.h
app-static/converter/: discountmarkdownconverter.cpp  discountmarkdownconverter.h  embeddedmediapostprocessor.cpp  embeddedmediapostprocessor.h  embeddedmediapreprocessor.cpp  embeddedmediapreprocessor.h  hoedownmarkdownconverter.cpp  hoedownmarkdownconverter.h  htmlpostprocessor.cpp  htmlpostprocessor.h  markdownconverter.cpp  markdownconverter.h  markdowndocument.h  revealmarkdownconverter.cpp  revealmarkdownconverter.h  textpreprocessor.cpp  textpreprocessor.h
app-static/json/: jsoncollection.h  jsontranslator.h  jsontranslatorfactory.h
app-static/snippets/: jsonsnippetfile.cpp  jsonsnippetfile.h  jsonsnippettranslator.cpp  jsonsnippettranslator.h  jsonsnippettranslatorfactory.h  snippet.h  snippetcollection.cpp  snippetcollection.h  snippetlistmodel.cpp  snippetlistmodel.h
app-static/spellchecker/: dictionary.cpp  dictionary.h
app-static/styles/: jsonstyletranslator.cpp  jsonstyletranslator.h  style.h  stylecollection.cpp  stylecollection.h
app-static/template/: htmltemplate.cpp  htmltemplate.h  presentationtemplate.cpp  presentationtemplate.h  template.h
app-static/themes/: jsonthemetranslator.cpp  jsonthemetranslator.h  jsonthemetranslatorfactory.h  stylemanager.cpp  stylemanager.h  theme.cpp  theme.h  themecollection.cpp  themecollection.h  thememanager.cpp  thememanager.h
app/controls/: actionlabel.cpp  actionlabel.h  activelabel.cpp  activelabel.h  fileexplorerwidget.cpp  fileexplorerwidget.h  fileexplorerwidget.ui  findreplacewidget.cpp  findreplacewidget.h  findreplacewidget.ui  languagemenu.cpp  languagemenu.h  linenumberarea.cpp  linenumberarea.h  recentfilesmenu.cpp  recentfilesmenu.h
app/discount/: document.cpp  document.h  parser.cpp  parser.h
app/helpers/: ziptool.cpp  ziptool.h
app/hunspell/: dictionary.cpp  dictionary.h  spellchecker.cpp  spellchecker.h  spellchecker_macx.cpp  spellchecker_unix.cpp  spellchecker_win.cpp
app/icons/: COPYING
app/peg-markdown-highlight/: definitions.h  styleparser.cpp  styleparser.h
app/reveal/: demo.md  index.html  revealexporter.cpp  revealexporter.h  revealoptions.cpp  revealoptions.h
app/styles/: clearness-dark.css  clearness.css  markdown.css  node-dark.css
app/themes/: byword-dark+.txt  byword-dark.txt  default.txt
app/translations/: cutemarked_cs.ts  cutemarked_da.ts  cutemarked_de.ts  cutemarked_el.ts  cutemarked_es.ts  cutemarked_fr.ts  cutemarked_hu_HU.ts  cutemarked_id.ts  cutemarked_ja.ts  cutemarked_pl.ts  cutemarked_pt_BR.ts  cutemarked_ru.ts  cutemarked_zh_CN.ts
controls/: linenumberarea.h
data/: en_US-large.dic
fontawesomeicon/: fontawesomeicon.json  fontawesomeicon.pro  fontawesomeiconengine.cpp  fontawesomeiconengine.h  fontawesomeiconengineplugin.cpp  fontawesomeiconengineplugin.h
libs/: libs.pro
libs/jsonconfig/: jsonconfig.pro  jsonfile.h  jsontranslatorfactory.h
libs/peg-markdown-highlight/: definitions.h  peg-markdown-highlight.pro  pmh_definitions.h  pmh_parser.h  pmhmarkdownparser.cpp  pmhmarkdownparser.h  styleparser.cpp
peg-markdown-highlight/: CMakeLists.txt  peg-markdown-highlight.pro  pmh_parser.cpp  pmh_styleparser.h
rpm/: cutemarked.spec
sundown/: sundown.pri
test/: test.pro
test/integration/: discountmarkdownconvertertest.cpp  discountmarkdownconvertertest.h  hoedownmarkdownconvertertest.cpp  hoedownmarkdownconvertertest.h  htmlpreviewcontrollertest.cpp  htmlpreviewcontrollertest.h  htmltemplatetest.cpp  htmltemplatetest.h  integration.pro  jsonsnippetfiletest.cpp  jsonsnippetfiletest.h  jsonstylefiletest.cpp  jsonstylefiletest.h  jsonthemefiletest.cpp  jsonthemefiletest.h  loremipsumtestdata.h  main.cpp  markdowneditorcontrollertest.cpp  markdowneditorcontrollertest.h  pmhmarkdownparsertest.cpp  pmhmarkdownparsertest.h  revealmarkdownconvertertest.cpp  revealmarkdownconvertertest.h  themecollectiontest.cpp  themecollectiontest.h  thememanagertest.cpp  thememanagertest.h
test/unit/: completionlistmodeltest.cpp  completionlistmodeltest.h  dictionarytest.cpp  dictionarytest.h  jsonsnippettranslatortest.cpp  jsonsnippettranslatortest.h  jsonstyletranslatortest.cpp  jsonstyletranslatortest.h  jsonthemetranslatortest.cpp  jsonthemetranslatortest.h  jsontranslatorfactorytest.cpp  jsontranslatorfactorytest.h  main.cpp  unit.pro  (+22 more)
